<resources>
    <string name="app_name">Bar Giyora</string>

    <string name="login_title">כניסת משתמשים</string>
    <string name="login_exist">משתמש קיים</string>
    <string name="login_new">משתמש חדש</string>
    <string name="login_sign">לחץ להרשמה</string>
    <string name="login_google">הרשמה עם google</string>
    <string name="login_facebook">הרשמה עם facebook</string>
    <string name="login_submit_btn">כניסה</string>

    <string name="request">פניות</string>
    <string name="message">הודעות</string>
    <string name="settings">הגדרות</string>
    <string name="deliveryAndSale"> מסירה ומכירה</string>
    <string name="findRide">מצא טרמפ</string>
    <string name="residentService">שירות לתושב</string>
    <string name="localBusiness">עסקים מקומיים</string>
    <string name="gallery">גלרייה</string>
    <string name="nearUs">מה בסביבה</string>

    <string name="firstName">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="phone">מספר טלפון</string>
    <string name="password">סיסמא</string>
    <string name="validPassword">אימות סיסמא</string>
    <string name="apartment">מספר בית</string>
    <string name="email">דואר אלקטרוני</string>

    <string name="add_request_title">הוספת פניה חדשה</string>
    <string name="request_title">סמן את נושא הפניה:</string>
    <string name="request_content">תוכן הפניה:</string>

    <string name="request_content_hint">הכנס כאן את תוכן הפניה שלך</string>
    <string-array name="typeOfRequest">
        <item>בחר נושא</item>
        <item>בטחון</item>
        <item>תחזוקה</item>
        <item>תרבות והעשרה</item>
        <item>אחר</item>
    </string-array>

    <string name="postService">דואר</string>
    <string name="postDetails">ימי ראשון, שלישי וחמישי בין השעות 16:30-17:30</string>
    <string name="securingService">אבטחה</string>
    <string name="securingDetails">כל לילה בין השעות 23:00-5:00</string>
    <string name="branchCollectionService">איסוף גזם</string>
    <string name="branchCollectionDetails">אחת לחודש בתאריך שיפורסם מראש, יש להוציא את הגזם למדרכה יום קודם האיסוף</string>
    <string name="lumpyWasteCollectionService">איסוף פסולת גושית</string>
    <string name="lumpyWasteCollectionDetails">אחת לחודש בתאריך שיפורסם מראש, יש להוציא את הפסולת למדרכה יום קודם האיסוף</string>
    <string name="synagogueService">בית כנסת</string>
    <string name="synagogueDetails">שחרית: 5:30, מנחה וערבית: 17:15</string>
    <string name="mikvehService">מקווה טהרה </string>
    <string name="mikvehDetails">בשיפוצים עד להודעה חדשה</string>

    <string name="restaurant">מסעדות</string>
    <string name="pools">מעיינות ובריכות</string>
    <string name="trips">מסלולי טבע</string>
    <string name="various">שונות</string>
    <string name="add_restaurant_title">הוספת מסעדה</string>
    <string name="add_pool_title">הוספת בריכה</string>
    <string name="add_trip_title">הוספת מסלול טבע</string>
    <string name="add_various_title">הוספת שירותים שונים</string>

    <string name="name">שם:</string>
    <string name="details">פרטים נוספים:</string>

    <string name="food">מזון</string>
    <string name="construction">חומרי בניין</string>
    <string name="electric">עבודות חשמל</string>
    <string name="cosmetic">קוסמטיקה</string>
    <string name="wood">עבודות עץ</string>
    <string name="add_business_title">הוספת בית עסק</string>

    <string name="add_item_title">הוספת פריט חדש</string>
    <string name="forSale">למכירה</string>
    <string name="forDelivery">למסירה</string>
    <string name="price">מחיר:</string>
    <string name="item_name">שם הפריט:</string>
    <string name="item_details">תיאור הפריט:</string>


    <string name="add_new_user">הוספת משתמש חדש</string>
    <string name="change_email">עדכון מייל</string>
    <string name="change_password">שינוי סיסמא</string>
    <string name="old_email">מייל נוכחי</string>
    <string name="new_email">מייל חדש</string>
    <string name="old_password">סיסמא נוכחית</string>
    <string name="new_password">סיסמא חדשה</string>
    <string name="submit">עדכן</string>
    <string name="is_manager">הגדר כמנהל</string>

    <string name="status">סטטוס</string>
    <string name="publish_date">תאריך פניה</string>
    <string name="publish_time">שעת פניה</string>
    <string name="finish_date">תאריך סיום</string>
    <string name="finish_time">שעת סיום</string>
    <string name="address">כתובת</string>
    <string name="security">בטחון</string>
    <string name="maintenance">תחזוקה</string>
    <string name="culture">תרבות והעשרה</string>
    <string name="other">אחר</string>

    <string name="add_message_title">הוספת הודעה חדשה</string>
    <string name="message_title">נושא:</string>
    <string name="message_content">תוכן ההודעה:</string>


    <string name="title_activity_request">RequestActivity</string>
    <string name="action_settings">Settings</string>
</resources>
