<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResidentServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.65">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/entrance"
                android:orientation="vertical"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.35">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                android:id="@+id/tvPostServiceID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postService"/>
                <TextView
                    android:id="@+id/tvPostDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postDetails"/>
                <TextView
                    android:id="@+id/tvSecuringServiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/securingService"/>
                <TextView
                    android:id="@+id/tvSecuringDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/securingDetails"/>
                <TextView
                    android:id="@+id/tvBranchCollectionServiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/branchCollectionService"/>
                <TextView
                    android:id="@+id/tvBranchCollectionDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/branchCollectionDetails"/>
                <TextView
                    android:id="@+id/tvLumpyWasteCollectionServiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lumpyWasteCollectionService"/>
                <TextView
                    android:id="@+id/tvLumpyWasteCollectionDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lumpyWasteCollectionDetails"/>
                <TextView
                    android:id="@+id/tvSynagogueServiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synagogueService"/>
                <TextView
                    android:id="@+id/tvSynagogueDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synagogueDetails"/>
                <TextView
                    android:id="@+id/tvMikvehServiceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mikvehService"/>
                <TextView
                    android:id="@+id/tvMikvehDetailsID"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mikvehDetails"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>