<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/entrance"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegFirstNameID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstName"/>
            <EditText
                android:id="@+id/etRegFirsNameID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegLastNameID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etRegLastNameID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegPhoneID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_weight="1"/>
<!--TODO check-->
            <EditText
                android:id="@+id/etRegPhoneID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--TODO check-->
            <TextView
                android:id="@+id/tvRegEmailID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etRegEmailID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--TODO check-->
            <TextView
                android:id="@+id/tvRegPasswordID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etRegPasswordID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegValidPasswordID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/validPassword"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etRegValidPasswordID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegIsAdminID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/is_manager"/>
            <CheckBox
                android:id="@+id/cbRegIsAdminID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvRegSumbitID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>
